--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ feedparser
 nltk
 requests
 python-dateutil
+gspread  # New library for Google Sheets
+gspread-dataframe # New library to work with pandas DataFrames and gspread
+oauth2client # Often a dependency for gspread, good to have
